--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "start": "next start"
-  },
+    "dev": "next dev -p 80",
+    "start": "next start -p 80"
+},
   "dependencies": {
     "next": "latest",
     "react": "18.2.0",
