--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "18.2.0"
   },
   "engines": {
-    "node": "~20.11.0"
+    "node": "^20.11.0"
   },
   "rules": {
     "@next/next/no-document-import-in-page": "off"
