--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start -p 80"
 },
   "dependencies": {
+    "@fal-ai/serverless-client": "^0.8.5",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
