--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "build": "next build",
     "dev": "next dev -p 80",
     "start": "next start -p 80"
-},
+  },
   "dependencies": {
     "@fal-ai/serverless-client": "^0.8.5",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-select": "^5.8.0"
   },
   "engines": {
