--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 80",
+    "dev": "node server.js",
     "start": "next start -p 80"
   },
   "dependencies": {
     "@fal-ai/serverless-client": "^0.8.5",
+    "axios": "^1.7.3",
+    "d3": "^7.9.0",
+    "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
