--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@fal-ai/serverless-client": "^0.8.5",
+    "antd": "^5.20.1",
     "axios": "^1.7.3",
     "d3": "^7.9.0",
     "express": "^4.19.2",
