--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
+    "ml-pca": "^4.1.1",
     "next": "^14.1.0",
+    "numeric": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0"
