--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "start": "next start -p 80"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@fal-ai/serverless-client": "^0.8.5",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
+    "canvas": "^2.11.2",
     "d3": "^7.9.0",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
+    "json5": "^2.2.3",
     "ml-pca": "^4.1.1",
     "next": "^14.1.0",
     "numeric": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "replicate": "^0.33.0"
   },
   "engines": {
     "node": "^20.11.0"
