--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@fal-ai/client": "^1.1.1",
     "@fal-ai/serverless-client": "^0.8.5",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
