--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "canvas": "^2.11.2",
     "canvg": "^4.0.2",
     "d3": "^7.9.0",
-    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
     "json5": "^2.2.3",
@@ -24,8 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
-    "replicate": "^0.33.0",
-    "xlsx": "^0.18.5"
+    "replicate": "^0.33.0"
   },
   "engines": {
     "node": "^20.11.0"
