--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ml-pca": "^4.1.1",
     "next": "^14.1.0",
     "numeric": "^1.2.6",
+    "openai": "^4.100.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
