--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
+    "react-window": "^1.8.11",
     "replicate": "^0.33.0"
   },
   "engines": {
